--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/SamuelPolgar/ContentConnector#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "jmespath": "^0.16.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
